--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Bienvenu sur Groupomania, le réseau social du groupe éponyme de grande distribution ! Cet outil a pour objectif de dynamiser les interactions entre les collaborateurs du groupe. Bonne expérience !">
+    <meta name="robots" content="noindex">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Groupomania</title> 
   </head>
